axion/deplyoment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: axion-ui-deployment

spec:
  replicas: 4

  selector:
    matchLabels:
      app: axion-ui

  template:
    metadata:
      labels:
        app: axion-ui

    spec:
      containers:
      - name: axion-ui
        image: devopsinsiders/axion-ui
        ports:
        - containerPort: 80
