axion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
spec:
  ingressClassName: azure-application-gateway

  rules:
  - host: axion-ui.anujthakur.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axion
            port:
              number: 80
